--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-tiny-popover": "^7.2.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
