--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-tiny-popover": "^7.2.4",
+    "sass": "^1.62.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
