--- a/package.json
+++ b/package.json
@@ -13,10 +13,8 @@
     "@heroicons/react": "^2.0.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-tiny-popover": "^7.2.4",
     "sweetalert2": "^11.7.5",
-    "sweetalert2-react-content": "^5.0.7",
-    "uuid": "^9.0.0"
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
